--- a/src/styles.css
+++ b/src/styles.css
@@ -45,11 +45,11 @@
 
 .flexRow {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: center;
   flex-direction: row;
   position: relative;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
