--- a/src/styles.css
+++ b/src/styles.css
@@ -33,10 +33,11 @@
 .card {
   border: 5px solid rgb(32, 216, 87);
   height: 30%;
-  padding: 5px;
+  padding: 20px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin: 10px;
 }
 
 .alignLeft {
@@ -49,8 +50,7 @@
   align-items: center;
   flex-direction: row;
   position: relative;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .centered {
