--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,7 @@
   flex-wrap: wrap;
   align-items: center;
   flex-direction: row;
-  position: relative;
+  position: sticky;
   justify-content: space-between;
 }
 
